--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,7 @@ php:
   - hhvm
 
 before_script:
-  - composer install --dev
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
 
-script:
-  - phpunit --coverage-clover=coverage.clover
-
-after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+script: phpunit
