--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=5.5",
-    "psr/log-implementation": "^1.0.0"
+    "psr/log": "^1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.1",
